// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating common property has extension override on association extension with include on extendee not matching collection cardinality should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Association Extension EntityName2. 'common extension' must maintain the same cardinality as in the base entity."`;

exports[`when validating common property has extension override on association extension with include on extendee not matching collection cardinality should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 29,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on association extension with include on extendee not matching nullablility should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Association Extension EntityName2. 'common extension' must maintain the same cardinality as in the base entity."`;

exports[`when validating common property has extension override on association extension with include on extendee not matching nullablility should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 29,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on association extension without include on extendee should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Association Extension EntityName2. 'common extension' is only valid for referencing common properties with the same declaration as in the base entity."`;

exports[`when validating common property has extension override on association extension without include on extendee should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 25,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on domain entity extension with include on extendee not matching collection cardinality should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Domain Entity Extension EntityName2. 'common extension' must maintain the same cardinality as in the base entity."`;

exports[`when validating common property has extension override on domain entity extension with include on extendee not matching collection cardinality should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 23,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on domain entity extension with include on extendee not matching nullablility should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Domain Entity Extension EntityName2. 'common extension' must maintain the same cardinality as in the base entity."`;

exports[`when validating common property has extension override on domain entity extension with include on extendee not matching nullablility should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 23,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on domain entity extension without include on extendee should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Domain Entity Extension EntityName2. 'common extension' is only valid for referencing common properties with the same declaration as in the base entity."`;

exports[`when validating common property has extension override on domain entity extension without include on extendee should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 19,
  "tokenText": "common extension",
}
`;

exports[`when validating common property has extension override on non domain entity or association extensions should have validation failure 1`] = `"'common extension' is invalid for property EntityName1 on Domain Entity EntityName2. 'common extension' is only valid for referencing common properties with the same declaration as in the base entity."`;

exports[`when validating common property has extension override on non domain entity or association extensions should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "common extension",
}
`;
